--- a/client/index.html
+++ b/client/index.html
@@ -6,5 +6,48 @@
     <title>CPEN322 Project</title>
   </head>
   <body>
+
+    <div id = "app-view">
+      <ul id = "app-menu">
+        <li class = menu-item>
+          <a href = "/">Rooms</a>
+        </li>
+        <li class = menu-item>
+          <a href = "/profile">Profile</a>
+        </li>
+      </ul>
+      <div id = page-view>
+            
+        <div class = "content">
+          <ul class = "room-list">
+            <li> 
+              <a href = "/chat">chat1</a>
+            </li>
+
+            <li> 
+              <a href = "/chat">chat2</a>
+            </li>
+
+            <li> 
+              <a href = "/chat">chat3</a>
+            </li>
+
+            <li> 
+              <a href = "/chat">chat4</a>
+            </li>
+          </ul>
+
+          <div class = "page-control">
+            <input type="text" id="room name" name="room name">
+            <button type="button">Creat Room</button>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+
+
   </body>
 </html>
