--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CPEN322 Project</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -38,8 +39,8 @@
           </ul>
 
           <div class = "page-control">
-            <input type="text" id="room name" name="room name">
-            <button type="button">Creat Room</button>
+            <input type="text" id="room-name" name="room name">
+            <button type="button">Create Room</button>
           </div>
         </div>
 
