--- a/client/profile.html
+++ b/client/profile.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CPEN322 Project profile</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
+</head>
+<script src="http://3.98.223.41/cpen322/test-a1.js" type="text/javascript"></script>
 
-    <div id = "app-view">
-      <ul id = "app-menu">
-        <li class = menu-item>
-          <a href = "/">Rooms</a>
-        </li>
-        <li class = menu-item>
-          <a href = "/profile">Profile</a>
-        </li>
-      </ul>
-      <div id = page-view>
+<body>
 
-        <div class = "content">
-            <div class = "profile-form">
-                <div class = "form-field">
-                    <label>Username</label>
-                    <input type="text" id="message" name="message">
+    <div id="app-view">
+        <ul id="app-menu">
+            <li class=menu-item>
+                <a href="/">Rooms</a>
+            </li>
+            <li class=menu-item>
+                <a href="/profile">Profile</a>
+            </li>
+        </ul>
+        <div id=page-view>
 
-                    <label>Password</label>
-                    <input type="password" id="message" name="message">
+            <div class="content">
+                <div class="profile-form">
+                    <div class="form-field">
+                        <label>Username</label>
+                        <input type="text" id="message" name="message">
 
-                    <label>Avatar Image</label>
-                    <input type="file" id="message" name="message">
+                        <label>Password</label>
+                        <input type="password" id="message" name="message">
 
-                    <label>About</label>
-                    <textarea id="message" name="message"></textarea>
+                        <label>Avatar Image</label>
+                        <input type="file" id="message" name="message">
+
+                        <label>About</label>
+                        <textarea id="message" name="message"></textarea>
+
+                    </div>
 
                 </div>
 
-            </div>
-
-            <div class = "page-control">
-                <button type="button">Save</button>
+                <div class="page-control">
+                    <button type="button">Save</button>
+                </div>
             </div>
         </div>
-      </div>
     </div>
 
 
-  </body>
+</body>
+
 </html>
