--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CPEN322 Project</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-  </head> <script src="http://3.98.223.41/cpen322/test-a1.js" type="text/javascript"></script>
+  </head> 
   <body>
 
     <div id = "app-view">
