task5. with problems: main, hash

--- a/client/chat.html
+++ b/client/chat.html
@@ -13,15 +13,15 @@
   <div id="app-view">
     <ul id="app-menu">
       <li class=menu-item>
-        <a href="/">Rooms</a>
+        <a href="#/">Rooms</a>
       </li>
       <li class=menu-item>
-        <a href="/profile">Profile</a>
+        <a href="#/profile">Profile</a>
       </li>
     </ul>
     <div id=page-view>
 
-
+<!-- 
       <div class="content">
         <h4 class="room-name">Room name</h4>
 
@@ -41,7 +41,7 @@
           <textarea id="message" name="message"></textarea>
           <button type="button">Send</button>
         </div>
-      </div>
+      </div> -->
 
 
 
