--- a/client/profile.html
+++ b/client/profile.html
@@ -21,7 +21,7 @@
         </ul>
         <div id=page-view>
 
-            <div class="content">
+            <!-- <div class="content">
                 <div class="profile-form">
                     <div class="form-field">
                         <label>Username</label>
@@ -43,7 +43,7 @@
                 <div class="page-control">
                     <button type="button">Save</button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
