--- a/client/index.html
+++ b/client/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CPEN322 Project</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="app.js" type="text/javascript"></script>
+    
+    <script src="http://3.98.223.41/cpen322/test-a2.js" type="text/javascript"></script>
   </head> 
   <body>
 
     <div id = "app-view">
       <ul id = "app-menu">
         <li class = menu-item>
-          <a href = "/">Rooms</a>
+          <a href = "#/">Rooms</a>
         </li>
         <li class = menu-item>
-          <a href = "/profile">Profile</a>
+          <a href = "#/profile">Profile</a>
         </li>
       </ul>
       <div id = page-view>
             
-        <div class = "content">
+        <!-- <div class = "content">
           <ul class = "room-list">
             <li> 
               <a href = "/chat">chat1</a>
@@ -42,7 +45,7 @@
             <input type="text" id="room-name" name="room name">
             <button type="button">Create Room</button>
           </div>
-        </div>
+        </div> -->
 
 
 
